objects/Omni_Content_Data_Set_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Content_Symptom__c</fullName>
        <label>Content Symptom</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Workgroup_Queue__c</fullName>
        <label>Content Workgroup Queue</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Set_Category__c</fullName>
        <label>Data Set Category</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fallback_Workgroup_Queue__c</fullName>
        <label>Fallback Workgroup Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Allow_Content_Workgroup_Overflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Allow Content Workgroup Overflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_L4_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is L4 Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Queue_Based_Routing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Queue Based Routing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L4_Product_Name__c</fullName>
        <label>L4 Product Name</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>Omni Content Data Set Mapping</label>
</CustomObject>